-
Bug
-
Resolution: Done
-
Not Evaluated
-
6.2.0
-
None
-
4531aad935d55924a32212b339c657ce363a6c08 (qt/qtsvg/dev) 313ed1613a43b122689cb147c4d995966707690e (qt/qtsvg/6.2)
the font size property is always parsed as pixels, the attached file whose font size is specified as pt is rendered wrong.
See the attached screenshot of qmlscene vs inkscape
| For Gerrit Dashboard: QTBUG-97422 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 376066,2 | Support font size not in pixels | dev | qt/qtsvg | Status: MERGED | +2 | 0 |
| 376187,2 | Support font size not in pixels | 6.2 | qt/qtsvg | Status: MERGED | +2 | 0 |