Support font size not in pixels

Fixes: QTBUG-97422
Change-Id: I4df2af0e657f241af69480e6e30d454870df51d8
Reviewed-by: Eirik Aavitsland <eirik.aavitsland@qt.io>
(cherry picked from commit 4531aad935d55924a32212b339c657ce363a6c08)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>